objects/Limitations__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will be used for custom benefits and limitations</description>
        <label>Additional Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDPName__c</fullName>
        <description>The name of the benefit this limitation belongs to.</description>
        <formula>Benefit__r.BDPName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Mandate_Name__c</fullName>
        <formula>if(NOT(ISBLANK(Benefit__r.Copay_Type_1_Mandate_Name__c)),Benefit__r.Copay_Type_1_Mandate_Name__c,Benefit__r.Parent_Benefit_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Mandate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <formula>Text(Benefit__r.Benefit_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <label>Benefit</label>
        <referenceTo>AIA_Benefits__c</referenceTo>
        <relationshipName>Limitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clone_Benefit_name__c</fullName>
        <formula>Benefit__r.Benefit_Name__c</formula>
        <label>Clone Benefit name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CommentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FundingArrangement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Arrangement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_ASO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS ASO Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <formula>if(  ISPICKVAL( Type__c , 'Comment') , IF( IsRequired__c &lt;&gt; IsSelected__c ,'Yes',(IF(Additional_Comment__c == True,'Yes','No'))),  IF(  OldMax_TierVal__c&lt;&gt; MaxRow_Value__c  ,'Yes','No') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>API Name 'IsSelected'</inlineHelpText>
        <label>Comment Code Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitation_ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Limitation ExtID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitation_Name__c</fullName>
        <description>The name of the limitation</description>
        <formula>Benefit__r.Benefit_Name__c + ' - ' + IF(Text(Benefit__r.Benefit_Type__c) != 'Limitation', Text(Benefit__r.Benefit_Type__c), CASE(Type__c, 'MaxRow', 'Max Row', 'TierLimit', 'Tier Limit', 'Comment', 'Comment Code', ''))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the limitation.  This field is auto generated based on the parent's benefit name.</inlineHelpText>
        <label>Limitation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitations_NonEditable__c</fullName>
        <description>Used to check logic based on US B-03470 and makes this field true or false.</description>
        <formula>Benefit__r.Grouper__r.Proposed_Products__r.Benefit_Request_Form__r.Limitations_NonEditable__c</formula>
        <label>Limitations Non Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MandateIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MandateName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandate_Jurisdiction__c</fullName>
        <formula>Text(Benefit__r.Copay_Type_1_Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mandate Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandate_Yes_No__c</fullName>
        <formula>text(Benefit__r.Mandate_Yes_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mandate Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxAgeFrom__c</fullName>
        <label>Max Age From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxAgeTo__c</fullName>
        <label>Max Age To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxAgeType__c</fullName>
        <label>Max Age Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Years of Age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxAge_Selected_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxAge Selected Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxAge_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MaxAge Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxApply__c</fullName>
        <label>Max Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Breast</fullName>
                </value>
                <value>
                    <fullName>Per Condition</fullName>
                </value>
                <value>
                    <fullName>Per Ear</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxDurationType__c</fullName>
        <label>Max Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Episode</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Year-to-date</fullName>
                </value>
                <value>
                    <fullName>Live Birth</fullName>
                </value>
                <value>
                    <fullName>Pregnancy</fullName>
                </value>
                <value>
                    <fullName>Months following patients death</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>Hospice Eligibility Period</fullName>
                </value>
                <value>
                    <fullName>Admission</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxDuration_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration High</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Range__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Selected_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Selected Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MaxDuration Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Valid_Ranges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Valid Ranges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration__c</fullName>
        <label>Max Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxRange_Type__c</fullName>
        <label>MaxRange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Max Value Range</fullName>
                </value>
                <value>
                    <fullName>Max Duration Range</fullName>
                </value>
                <value>
                    <fullName>Max Value Valid</fullName>
                </value>
                <value>
                    <fullName>Max Duration Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxRow_InValid_Ranges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxRow InValid Ranges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxRow_Mandate_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxRow Mandate Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxRow_Value__c</fullName>
        <formula>TRIM(IF(MaxDuration_Selected__c=true &amp;&amp; NOT(ISBLANK(MaxDuration_Selected_Value__c)), MaxDuration_Selected_Value__c+' ', '') +

IF(MaxAge_Selected__c=true &amp;&amp; NOT(ISBLANK(MaxAge_Selected_Value__c)),  MaxAge_Selected_Value__c,'')

+

IF(TierLimit_Selected__c = true &amp;&amp; NOT(ISBLANK(TierLimit_Selected_Value__c)),  TierLimit_Selected_Value__c+' ','') +



IF(TierAge_Selected__c = true &amp;&amp; NOT(ISBLANK(TierAge_Selected_Value__c)),  TierAge_Selected_Value__c ,''))</formula>
        <label>Max Row Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxType__c</fullName>
        <label>Max Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visits</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>Mammogram</fullName>
                </value>
                <value>
                    <fullName>Hearing Aid</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
                <value>
                    <fullName>Attempts</fullName>
                </value>
                <value>
                    <fullName>Wig</fullName>
                </value>
                <value>
                    <fullName>Home Health Aide Visits</fullName>
                </value>
                <value>
                    <fullName>Home Care Days</fullName>
                </value>
                <value>
                    <fullName>Home Care Visits</fullName>
                </value>
                <value>
                    <fullName>Exam</fullName>
                </value>
                <value>
                    <fullName>Pair of Contact Lenses/Eye Glasses</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Pulmonary Rehabilitation Program</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>EKG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxValue_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue High</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Range__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Valid_Ranges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Valid Ranges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue__c</fullName>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Duration1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Max Duration1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Accum_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maximum Accum ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Apply_Rate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maximum Apply Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldMax_TierVal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OldMax TierVal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Benefit_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCS Benefit Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPName__c</fullName>
        <description>The name of the Proposed Product this limitation belongs to.</description>
        <formula>Benefit__r.PPName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBenefitName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Benefit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>The product category</description>
        <formula>Benefit__r.Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product category</inlineHelpText>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recordtype__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TierAgeFrom__c</fullName>
        <label>Tier Age From`</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierAgeTo__c</fullName>
        <label>Tier Age To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierAgeType__c</fullName>
        <label>Tier Age Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierAge_Selected_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TierAge Selected Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TierAge_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TierAge Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TierLimitDurationType__c</fullName>
        <label>Tier Limit Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierLimitFrom__c</fullName>
        <label>Tier Limit From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierLimitTo__c</fullName>
        <label>Tier Limit To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierLimitType__c</fullName>
        <label>Tier Limit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visits</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierLimit_Selected_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TierLimit Selected Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TierLimit_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TierLimit Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Value__c</fullName>
        <formula>IF(TEXT(Type__c)='TierLimit',(Text(TierLimitFrom__c) +' '+Text(TierLimitTo__c) +' '+ Text(TierLimitType__c) +' '+ Text(TierLimitDurationType__c)),


IF(TEXT(Type__c)='TierLimit',( Text(TierAgeFrom__c)+' '+ Text(TierAgeTo__c) +' '+ Text(TierAgeType__c)),''))</formula>
        <label>Tier Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MaxRow</fullName>
                </value>
                <value>
                    <fullName>TierLimit</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variation_Condition_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Variation Condition ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comment_codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Comment Code</label>
    <nameField>
        <displayFormat>BL-{0000000000}</displayFormat>
        <label>Limitations #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comment Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>